Desktop additions 03 April 2019

--- a/4R.md
+++ b/4R.md
@@ -10,7 +10,7 @@ csl: /Users/dborus/Desktop/chicago-fullnote-bibliography.csl
 \
 In his second novel, *Giovanni's Room* (1956), James Baldwin has his narrator-protagonist David muse on why he lit out suddenly for Europe. David did so, he reflects, for the peculiarly American reason that he “wanted to find myself.” He notes regards that phrase is neither current “in the language of any other people” and “certainly does not mean what it says but betrays a nagging suspicion that something has been misplaced.” The sojourn to the Old World does little to render David’s desires, inclinations, and capacities legible or stable. Unable to accept his homosexual longings, particularly for the titular character whom he abandons in the face of his conviction and execution for murder, David ends alienated from his very physical being, baffled when looking in the mirror by “what moves in this body” and for “what this body is searching.”[@baldwin1956, p. 39, 189]
 
-Contemporary critics found fault not only with the novel's unapologetic treatment of homosexuality but also its lack of coverage of black life and accused Baldwin of decadence and elitism. They missed, however, the central contention of Baldwin's fiction and nonfiction alike: the race problem originated in whites' inability to know themselves. Baldwin was only one of many artists and scholars who held that postwar American society made it difficult for Americans to develop a firm sense of who they were, allow consistent personal expression or reliably foster expanded capacities. As the leading exemplar of modernity, the United States was, the argument went, especially prone to psychic upheavals and fragmentation despite the often placid exterior of its citizens. Writing in 1962, the husband and wife team Mary and Eric Josephson laid blame for such psycho-social disorders as loss of self, anxiety states, despair, rootlessness, apathy, meaninglessness, and loss of beliefs and values on the absence of meaningful communities and interpersonal relations. Other commentators blamed corporate bureaucracy, advertising, and a wide array of institutional demands for conformity such as schools and the media.[^2]
+Contemporary critics found fault not only with the novel's unapologetic treatment of homosexuality but also its lack of coverage of black life and accused Baldwin of decadence and elitism. They missed, however, the central contention of Baldwin's fiction and nonfiction alike: the race problem originated in whites' inability to know themselves. Baldwin was only one of many artists and scholars who held that postwar American society made it difficult for Americans to develop a firm sense of who they were, allow consistent personal expression or reliably foster expanded capacities. As the leading exemplar of modernity, the United States was, the argument went, especially prone to psychic upheavals and fragmentation despite the often placid exterior of its citizens. Writing in 1962, the husband and wife team Mary and Eric Josephson laid blame for such psycho-social disorders as loss of self, anxiety states, despair, rootlessness, apathy, meaninglessness, and loss of beliefs and values on the absence of meaningful communities and interpersonal relations. Other commentators blamed corporate bureaucracy, advertising, and a wide array of institutional demands for conformity such as schools, the media, and a whole slew of new communities that emphasized the isolation of the nuclear family.[^2]
 
 Postwar concern about the insubstantiality of selves quickly assumed a political cast. Material and objective causes did not, most analysts contended, fully explanation popular support for Fascist and Communist regimes.  Mass intolerance and antidemocratic movements were best explained by psychosocial abnormalities. Erich Fromm's *Escape from Freedom* (1941), Theodor Adorno's *Authoritarian Personality* (1950), and Hannah Arendt's *Origin of Totalitarianism* all attributed totalitarian success to the ability of ruling groups to manipulate unfulfilled psychological needs. Although fascist and communist ideologies had little appeal to most Americans, many commentators nonetheless worried that a society of anomic individuals who lacked internalized standards were fodder for poseurs and demagogues. That possibility no doubt fanned an interest in Tocqueville's argument that democracy produced citizens who sought safety i a culture of stifling uniformity and who were capable of massing against those who were distinctive or different.[^3] Augmenting the theoretical work of the social critics was that of social psychologists in a series of experiments Solomon Asch and Stanley Milgram obtained results that suggested most individuals lacked the psychological assuredness to resist a relentless majority or a demanding, unfeeling authority. Asch (1951, 1956) observed that subjects more often than not acceded to the group truth, even when it countered their own perceptions. For his part, Milgram discovered that most people would continue to punish others when ordered to do so. There was, many observers concluded a "Good German" in all of us.[^4]
 
@@ -112,7 +112,7 @@ Although most debate revolved around how the body determined identity, there wer
 
 
 
-Midcentury Americans were inveterate joiners. Such organizations as the Boy Scouts, Parent-Teachers Association and the League of Women Voters experienced tremendous growth from 1950 to 1960, virtually doubling during the period. Socializing was central to commercial ventures as well. The much-derided Tupperware---plastic covered dishes intended to store leftovers ---was founded in 1948 and rose to cultural prominence and lucrative returns on the strength of its marketing through “Tupperware parties” of friends and neighbors. As commentators puzzled out the meaning of American joining, they ultimately confronted the question of whether society was too much or too little present in the formation of the integrated self. On the one hand, social critics created a cottage industry in the criticism of American conformity, singling out suburbia and corporate bureaucracies as the prime offenders. Such social pressure, they maintained, interfered with the development of a true self and left the individual at the mercy of others. Others worried that social bonds were too thin and too superficial to support the needs of human development. Cut adrift, dependent on their own meager resources, and bereft of meaningful interaction, Americans were bound to be stunted, myopic and narcissistic.[^27]
+Midcentury Americans were inveterate joiners. Such organizations as the Boy Scouts, Parent-Teachers Association and the League of Women Voters experienced tremendous growth from 1950 to 1960, virtually doubling during the period. Even some sales unfolded in a group environment. The much-derided Tupperware---plastic covered dishes intended to store leftovers ---was founded in 1948 and rose to cultural prominence and lucrative returns on the strength of its marketing through “Tupperware parties” of friends and neighbors. Many commentators complained about the pressure to belong and conform and the suspicion that attached to outsiders and loners. Yet observers also claimed the connections of bowling leagues and other civil society groups were particularly thin and unfulfilling. American life, it seemed, oscillated between anchoring the individual too firmly to allow growth and experimentation and too loosely to convey security. The upshot in either case was a growing worry about Americans' ability to know who they were.[^27]
 
 Although there is very little discussion of loneliness as the term is usually understood, David Riesman’s _Lonely Crowd_ (1950) takes as its central problem the changing relationship of the self and others. Riesman developed an interest in sociology during his analysis with Erich Fromm. Originally, he and his associates Reuel Denney and Nathan Glazer set out to study apathy during the 1948 presidential election; the project morphed into a study of which abstract character type predominated at a given stage of the past. Where once the prevailing personality type was inner-directed, transformation in social organization --- particularly the rise of bureaucracy and mass communications --- gave rise to the other-directed type. Inner-directeds, as the name suggests, subscribed to values and followed a code of behavior she or he has internalized. In contrast, other-directed people took their cues from social expectations and the reactions of their fellows. Inner-directed folks gained identity primarily from work; outer-directeds organized their self-conception around leisure and consumption. The other directed was a life filled with anxiety, as opposed to the inner-directed’s guilt.
 
