--- a/4R.md
+++ b/4R.md
@@ -88,7 +88,7 @@ Although most debate revolved around how the body determined identity, there wer
 
 
 
-Midcentury Americans were inveterate joiners. Such organizations as the Boy Scouts, Parent-Teachers Association and the League of Women Voters experienced tremendous growth from 1950 to 1960, virtually doubling during the period. Even some sales unfolded in a group environment. The much-derided Tupperware---plastic covered dishes intended to store leftovers ---was founded in 1948 and rose to cultural prominence and lucrative returns on the strength of its marketing through “Tupperware parties” of friends and neighbors. Many commentators complained about the pressure to belong and conform and the suspicion that attached to outsiders and loners. Yet observers also claimed the connections of bowling leagues and other civil society groups were particularly thin and unfulfilling. American life, it seemed, oscillated between anchoring the individual too firmly to allow growth and experimentation and too loosely to convey security. The upshot in either case was a growing worry about Americans' ability to know who they were.[^29]
+Midcentury Americans were inveterate joiners. Such organizations as the Boy Scouts, Parent-Teachers Association and the League of Women Voters experienced tremendous growth from 1950 to 1960, virtually doubling during the period. Even some sales unfolded in a group environment. The much-derided Tupperware---plastic covered dishes intended to store leftovers ---was founded in 1948 and rose to cultural prominence and lucrative returns on the strength of its marketing through “Tupperware parties” of friends and neighbors. Many commentators complained about the pressure to belong and conform and the suspicion that attached to outsiders and loners. Yet observers also claimed the connections of bowling leagues and other civil society groups were particularly thin and unfulfilling. Americans, they observed, had no real connections and felt meaningless and alone. In many ways, these seemingly opposite complaints were two sides of the same coin, the inability American life to derive a productive relationship between individuals and society.[^29]
 
 [^29]: Membership statistics are from http://historyofscouting.com/history/history-1950.htm, accessed 05/27/2015 20:33 and http://historyofscouting.com/history/history-1950.htm.
 
@@ -111,17 +111,31 @@ Others were less subtle than Riesman. Both William Whyte and Vance Packard were 
 
 [^32]: Daniel Horowitz has the definitive biography of Vance Packard, [@horowitz1994] In a subsequent volume, he points to the way abundance and consumerism changed social criticism.[@horowitz2004] Criticism of the conformist view of the suburbs can be found in Herbert J. Gans, *The Levittowners: Ways of Life and Politics in a New Suburban Community* (New York: Institute of Urban Studies, Teachers College, Columbia University, 1965). Criticism of Packard can be found in Lewis Coser, “Kitsch Sociology” *Partisan Review* (Summer 1959): 480-3. Whyte’s guide to cheating on personality tests is the Appendix to *The Organization Man*, 405-10.
 
-Whyte and Packard’s lament the autonomous self who resisted social pressure was echoed in the popular film genre that enjoyed something of a heyday in midcentury, the Western. The typical 1950s Western probed the social and cultural conflict that arose when rugged individualism lost its social utility. At odds with the direction of history, Western heroes constantly drift or die. Despite their ostensible celebration of their protagonist’s resistance to social demands, midcentury Westerns have an elegiac feel. Heroic bold action ends with complete alienation from the community. John Wayne’s Tom in Howard Hawks’s *Red River* (1948) is a rugged individualist par excellence who demands others bend to his will. He regards others’ needs as a personal attack and treats compromise as weakness. During a crucial cattle drive, his violent and inhumane behavior boils over in a mutiny led by his adopted son, Montgomery Clift’s Matt, whom in a reversal of the Oedipal drama Tom vows to kill. In the case of *Shane* (1953), the titular character is caught between his gunslinging nature and his desire to put his past away. When a cattle baron and his henchmen attempt to engross the fertile land of the valley, threatening the farm family where Shane works and boards, he abandons his pledge, killing the treacherous baron and his hired guns in a showdown. Though the young boy who idolizes him wants Shane to “come back,” Shane intuitively understands the impossibility of a self like his living peaceably with others, even as his skills constitute a precondition for society. In *High Noon* (1952) the incompatibility lies in the unprincipled conformity of those who compose respectful society. Hearing that a criminal, whom he had put away in jail was returning to exact his revenge, sheriff Will Kane (Gary Cooper) feels it incumbent to stand his ground, even though he was about to leave for the East with his new bride. Efforts to recruit help are unavailing and Kane faces the onslaught alone (with the help of his Quaker wife). Often taken as an allegory for Hollywood cravenness in the face of HUAC threats, the film earned praise for Kane’s doing what was right when others would not. Interestingly, Hawks and Wayne could not abide the film on grounds that the townsfolk were cowards and Kane was weak for asking for help and for ultimately being saved by his wife. Ronald Reagan, on the other hand, loved the film.[^33]
+Whyte and Packard’s lament for the disappearance of the autonomous self resistant to social pressure was echoed in the popular film genre that enjoyed something of a heyday in midcentury, the Western. The typical 1950s Western probed the social and cultural conflict that arose when rugged individualism lost its social utility. At odds with the direction of history, Western heroes constantly drift or die. Ostensibly a celebration of the lone hero's self-assuredness and unshakeable determination, midcentury Westerns have a melancholic feel. Heroic bold action ends with complete alienation from the community. John Wayne’s Tom in Howard Hawks’s *Red River* (1948) is a rugged individualist par excellence who demands others bend to his will. He regards others’ needs as a personal attack and treats compromise as weakness. During a crucial cattle drive, his violent and inhumane behavior boils over in a mutiny led by his adopted son, Montgomery Clift’s Matt, whom in a reversal of the Oedipal drama Tom vows to kill. In the case of *Shane* (1953), the titular character is caught between his gunslinging nature and his desire to put his past away. When a cattle baron and his henchmen attempt to engross the fertile land of the valley, threatening the farm family where Shane works and boards, he abandons his pledge, killing the treacherous baron and his hired guns in a showdown. Though the young boy who idolizes him wants Shane to “come back,” Shane intuitively understands the impossibility of a self like his living peaceably with others, even as his skills constitute a precondition for society. In *High Noon* (1952) the incompatibility lies in the unprincipled conformity of those who compose respectful society. Hearing that a criminal, whom he had put away in jail was returning to exact his revenge, sheriff Will Kane (Gary Cooper) feels it incumbent to stand his ground, even though he was about to leave for the East with his new bride. Efforts to recruit help are unavailing and Kane faces the onslaught alone (with the help of his Quaker wife). Often taken as an allegory for Hollywood cravenness in the face of HUAC threats, the film earned praise for Kane’s doing what was right when others would not. Interestingly, Hawks and Wayne could not abide the film on grounds that the townsfolk were cowards and Kane was weak for asking for help and for ultimately being saved by his wife. Ronald Reagan, on the other hand, loved the film.[^33]
+
+[^33]:	John G. Cawelti, *The Six-Gun Mystique* (Bowling Green, Ohio: Bowling Green State University Popular Press, 1984); Richard Slotkin, _Gunfighter Nation: The Myth of the Frontier in Twentieth-Century America_ (Norman: University of Oklahoma Press, 1998). Wayne's response to *High Noon* can be found in [@munn2004, p. 148]
+
 
 Placing the western in the present day only exacerbated the incongruity of the autonomous hero. In *Lonely Are the Brave* (1962), written by the once-blacklisted Dalton Trumbo from eco-anarchist Edward Abbey’s novel *The Brave Cowboy*, loner Jack Burns (Kirk Douglas) proves unable to function in modernity. The film drives the point home from the beginning where Burns at home on the range is discombobulated by screaming jets, gear-shifting trucks that make highway crossings on a horse nearly impossible, and barbed-wire fences that block free passage. Burns makes to trek from the New Mexico mountains to free his friend Paul, who has been jailed for smuggling Mexican refugees into the country. Once in town, Burns sets out to get arrested so he can break Paul out of jail with hacksaw blades he has smuggled into the prison. When family man Paul decides the costs of jail break are greater than doing the time, Burns escapes by himself. Chased by the forces of law and order with its radios and helicopters up the Sandia Mountains, Burns temporarily manages to evade capture, even shooting down a copter. Yet in the midst of trying to cross a highway, his horse once again spooks and Burns is hit by a truck carrying, in an excess of symbolism, a load of toilets.
 
 Douglas secured the rights and hired Trumbo to tell a story about the near impossibility of maintaining authentic individuality in a mass society bent on classifying and regulating its citizens. Burns has no ID cards because he knows who he is. He rejects fences and no trespassing signs because they represent society’s encroachment on his freedom. Director David Miller reinforced the point visually by showing the mountains and deserts of New Mexico in panoramic shots that emphasized the openness and freedom of nature and shooting the machinery and enclosed rooms of civilized society in claustrophobic closeups. In the end, of course, modern civilization would prove triumphant and doom folks like Burns. Yet Trumbo punctuated the requiem for the independent self with a caveat. Burns tells Jerry, Paul’s wife, with whom he was once in love that he was unfit for marriage, “Know what a loner is? He's a born cripple. He's a cripple because the only person he can live with is himself. It's his life, the way he wants to live. It's all for him. A guy like that, he'd kill a woman like you. Because he couldn't love you, not the way you are loved.” Such a scene can be read as an equation of solitude with selfishness. It might also be understood as a reaffirmation of gender differences: only men have the wherewithal to live as they want to live.
 
-Another, less conventional, version of authentic individuality arrived via the Beats, the best-known midcentury bohemians. Convinced that conventional American life demanded sterile routines that denied individuals genuine freedom, the motley collection of writers, poets, and artists stridently asserted their rejection of social norms that repressed impulses, outlawed meaningful experience, and demanded standardization of thought, feeling, and action. In reaction to a society that was overly sentimental and inauthentic, Beats adopted an attitude of cool, a reserved distance from convention. In contrast to middle-class norms of restraint and caution, Beats favored spontaneity. In protest of the mainstream insistence on propriety, Beats embraced the margins of society, seeking out the company of criminals, drugs addicts, deviants, and denigrated minorities. It was this spirt that Jack Kerouac expressed when the narrator of his 1957 novel, *On the Road*, Sal Paradise, declared “the only people for me are the mad ones, the ones who are mad to live, mad to talk, mad to be saved, desirous of everything at the same time, the ones that never yawn or say a commonplace thing, but burn, burn, burn” and celebrated the black community of Denver because “the best the white world had offered was not enough ecstasy for me, not enough life, joy, kicks, darkness, music, not enough night.”[^34]
+Another, less conventional, version of authentic individuality free from social constraints arrived via the Beats, the best-known midcentury bohemians. Convinced that conventional American life demanded sterile routines that denied individuals genuine freedom, the motley collection of writers, poets, and artists stridently asserted their rejection of social norms that, by their lights, repressed impulses, outlawed meaningful experience, and demanded standardization of thought, feeling, and action. In reaction to a society that was overly sentimental and inauthentic, Beats adopted an attitude of cool, a reserved distance from convention.[@dinerstein2017] In contrast to middle-class norms of restraint and caution, Beats favored spontaneity. In protest of the mainstream insistence on propriety, Beats embraced the margins of society, seeking out the company of criminals, drugs addicts, deviants, and denigrated minorities. It was this spirit that Sal Paradise gives voice to in Jack Kerouac's 1957 novel, *On the Road*, Sal Paradise, declared “the only people for me are the mad ones, the ones who are mad to live, mad to talk, mad to be saved, desirous of everything at the same time, the ones that never yawn or say a commonplace thing, but burn, burn, burn” and celebrated the black community of Denver because “the best the white world had offered was not enough ecstasy for me, not enough life, joy, kicks, darkness, music, not enough night.”[^34]
 
-Most unsympathetic commentators regarded Beats as conformist in their nonconformity and engaged in a juvenile reaction against adulthood. Writing in the *Partisan* Review, Norman Podhoretz lambasted their worship of primitive energy: “The plain truth is that the primitivism of the Beat Generation serves first of all as a cover for an anti-intellectualism so bitter that it makes the ordinary American’s hatred of eggheads seem positively benign.”[^35] Others saw racial stereotyping in the guise of admiration and a disregard for women’s contributions. Yet Beats were more than nay-saying hedonists. They overestimated the freedom they had achieved, but their quest to embrace experiences mainstream American frowned upon entailed a project of constructing a self unfettered by social boundaries whatsoever. As their embrace of madness indicates, the Beats regarded sanity as encasing and restricting the self. Drawing an eclectic mix of philosophical elements ranging from Eastern religion to the mysticism of William Blake, the Beats were even ready to jettison the self altogether as an illusion. The Beat self, William Burroughs observed needed to learn “to exist with no religion, no country, no allies” and “to live alone in silence.” Coming from a left-wing Jewish family, Allen Ginsberg could condemn in “America” (1956), a United States that committed crimes against Tom Mooney, Spanish Loyalists, and Scottsboro Boys and that sported such cultural monstrosities as television, *Time* magazine, and Henry Ford. Yet his resistance to the prison of centered selfhood enabled him to make common cause with the libertarian Burroughs and the Catholic anti-Communist Kerouac.[^36]
+[^34]:	Jack Kerouac, *On the Road.* (New York: Viking Press, 1957), 8,180.
 
-Beat spontaneity did not result in a consistent philosophy. More philosophically sophisticated in its consideration of the meaning and dilemmas of identity was existentialism. Although as historian George Cotkin has argued several strains of American thought had existential themes, the philosophy did not take hold until European versions arrived in mid-twentieth century. The thought of Soren Kierkegaard, introduced through the efforts of neo-Orthodox Episcopal minister, Walter Lowrie, led figures as diverse as Reinhold Niebuhr, Will Herberg, Whitaker Chambers, and Arthur Schlesinger, Junior to temper or reject their one-time expansive hopes for social transformation. Existentialism gathered steam with the New York intellectuals’ discovery and promotion of the French writers, Jean-Paul Sartre, Simone de Beauvoir and Albert Camus in the mid-1940s, but all three had unsatisfactory visits to United States. Their hosts criticized the existentialists for their flirtation with Marxism (Camus being an exception), shallow knowledge of Freud, and mass-media posturing. Nonetheless existentialism remained attractive as a philosophy of authenticity that enjoined individuals not to accept fate but instead create their identities as singular, unique beings. More than the pose of Greenwich Village coffeehouse habitués, existentialism proved a bracing challenge and support for those searching for an understanding of where they stood in the world. One sign of its success was the appearance of such academic efforts to provide meaningful genealogies and commentary as Hazel Barnes’s *The Literature of Possibility* (1957) and Walter Kaufmann’s *Existentialism From Dostoevsky to Sartre* (1956). By the mid-1960s, existentialism had profoundly affected the novelists Anne Rice and Marge Piercy, the feminist Roxanne Dunbar-Ortiz, and radicals Tom Hayden and Robert Moses, and, ironically, given their opposing sexual politics, Betty Friedan and Norman Mailer.[^37]
+Most unsympathetic commentators regarded Beats as conformist in their nonconformity and engaged in a juvenile reaction against adulthood. Writing in the *Partisan* Review, Norman Podhoretz lambasted their worship of primitive energy: “The plain truth is that the primitivism of the Beat Generation serves first of all as a cover for an anti-intellectualism so bitter that it makes the ordinary American’s hatred of eggheads seem positively benign.”[^35] Others saw racial stereotyping in the guise of admiration and a disregard for women’s contributions. Such criticisms were on target, but the Beats were not solely nay-saying hedonists. In their search for authenticity free from social boundaries and expectations, the Beats were in many respects the intensification of American values. Their experiments with madness, Eastern religion, and the mysticism of William Blake (to name three elements in their eclectic mix), they opened new avenues of for selfhood. At times, they stood ready to jettison the self altogether as an illusion. The Beat self, William Burroughs observed needed to learn “to exist with no religion, no country, no allies” and “to live alone in silence.”[^36] Coming from a left-wing Jewish family, Allen Ginsberg could condemn in “America” (1956), a United States that committed crimes against Tom Mooney, Spanish Loyalists, and Scottsboro Boys and that sported such cultural monstrosities as television, *Time* magazine, and Henry Ford. Yet his resistance to the prison of centered selfhood enabled him to make common cause with the libertarian Burroughs and the Catholic anti-Communist Kerouac.[^37]
+
+[^35]:	Norman Podhoretz, “The Know-Nothing Bohemians,” *Partisan Review* XXV (1958), 313.
+
+[^36]: Burroughs in *The Job: Interviews with William Burroughs by Daniel Odier* (New York: Penguin, 1989 [1969], p. )
+
+[^37]:	Ann Charters, *The Beats: Literary Bohemians in Postwar America* (Detroit, Mich.: Gale Research Co., 1983); Gene Feldman and Max Gartenberg, *The Beat Generation and the Angry Young Men* (Secaucus: Citadel Press, 1984); Kostas Myrsiades, *The Beat Generation: Critical Essays* (New York: Peter Lang, 2002); Leerom Medovoi, *Rebels Youth and the Cold War Origins of Identity*(Durham: Duke University Press, 2005).
+
+
+Beat spontaneity did not result in a consistent philosophy. More philosophically sophisticated in its consideration of the meaning and dilemmas of identity was existentialism. Although as historian George Cotkin has argued several strains of American thought had existential themes, the philosophy did not take hold until European versions arrived in mid-twentieth century. The thought of Soren Kierkegaard, introduced through the efforts of neo-Orthodox Episcopal minister, Walter Lowrie, led figures as diverse as Reinhold Niebuhr, Will Herberg, Whitaker Chambers, and Arthur Schlesinger, Junior to temper or reject their one-time expansive hopes for social transformation. Existentialism gathered steam with the New York intellectuals’ discovery and promotion of the French writers, Jean-Paul Sartre, Simone de Beauvoir and Albert Camus in the mid-1940s, but all three had unsatisfactory visits to United States. Their hosts criticized the existentialists for their flirtation with Marxism (Camus being an exception), shallow knowledge of Freud, and mass-media posturing. Nonetheless existentialism remained attractive as a philosophy of authenticity that enjoined individuals not to accept fate but instead create their identities as singular, unique beings. More than the pose of Greenwich Village coffeehouse habitués, existentialism proved a bracing challenge and support for those searching for an understanding of where they stood in the world. One sign of its success was the appearance of such academic efforts to provide meaningful genealogies and commentary as Hazel Barnes’s *The Literature of Possibility* (1957) and Walter Kaufmann’s *Existentialism From Dostoevsky to Sartre* (1956). By the mid-1960s, existentialism had profoundly affected the novelists Anne Rice and Marge Piercy, the feminist Roxanne Dunbar-Ortiz, and radicals Tom Hayden and Robert Moses, and, ironically, given their opposing sexual politics, Betty Friedan and Norman Mailer.[^38]
+
+[^38]:	George Cotkin, *Existential America* (Baltimore: Johns Hopkins University Press, 2003), 91-158; Hazel E. Barnes, *An Existentialist Ethics* (New York: Knopf, 1967); Hazel E. Barnes, *The Literature of Possibility: A Study in Humanistic Existentialism* (Lincoln: University of Nebraska Press, 1959); Walter Arnold Kaufmann, *Existentialism From Dostoevsky to Sartre* (New York: Meridian Books, 1956).
 
 Existentialism defined the human condition as strikingly individual. Though humans live in groups, our consciousness and our death were ours alone. Where determinisms wrongly subsumed particulars under abstract and ultimately meaningless concepts, existentialism was concerned with recognizing contingencies and making rather than discovering truth. At the core of things was the necessity of human choice. It was the inescapability of making choices and creating an identity that gave meaning to the famous Sartrean aphorism that existence precedes essence. Many of those choices were crucial ones that could not be fudged and committed one to a particular course, “either/or” in the parlance rather than “both/and.” Even though the world was absurd in the sense that meaning was not given, having to make a choice conferred a seriousness to life and required individuals to assume responsibility for whom one was and whom one became. One could not evade the responsibility of choice even if one occupied a lowly social position or suffered through oppressive conditions, a point Camus advanced in his “Myth of Sisyphus.” Condemned to the absurdity of forever pushing a boulder up a mountain, Sisyphus nonetheless differed from the inhuman boulder because he retained the ability to deny fate and make deliberate choices about what he would do. Sartre labeled bad faith any denial of responsibility for one’s situation. It was inauthentic to simply shrug one’s shoulders and assert this is just the way I am. Borrowing from phenomenological discussion of consciousness, Sartre asserted resignation denied our awareness, however dim and distant, that we are always more than ourselves. Existentialists insisted there was no greater inauthenticity than accepting without passionate engagement and choice social conventions.
 
@@ -151,15 +165,10 @@ The problem of loneliness generated calls for adopting of cheery attitude, joini
  
 
 
-[^33]:	John G. Cawelti, *The Six-Gun Mystique* (Bowling Green, Ohio: Bowling Green State University Popular Press, 1984); Richard Slotkin, _Gunfighter Nation: The Myth of the Frontier in Twentieth-Century America_ (Norman: University of Oklahoma Press, 1998).
 
-[^34]:	Jack Kerouac, *On the Road.* (New York: Viking Press, 1957), 8,180.
 
-[^35]:	Norman Podhoretz, “The Know-Nothing Bohemians,” *Partisan Review* XXV (1958), 313.
 
-[^36]:	Ann Charters, *The Beats: Literary Bohemians in Postwar America* (Detroit, Mich.: Gale Research Co., 1983); Gene Feldman and Max Gartenberg, *The Beat Generation and the Angry Young Men* (Secaucus: Citadel Press, 1984); Kostas Myrsiades, *The Beat Generation: Critical Essays* (New York: Peter Lang, 2002); Leerom Medovoi, *Rebels Youth and the Cold War Origins of Identity*(Durham: Duke University Press, 2005).
 
-[^37]:	George Cotkin, *Existential America* (Baltimore: Johns Hopkins University Press, 2003), 91-158; Hazel E. Barnes, *An Existentialist Ethics* (New York: Knopf, 1967); Hazel E. Barnes, *The Literature of Possibility: A Study in Humanistic Existentialism* (Lincoln: University of Nebraska Press, 1959); Walter Arnold Kaufmann, *Existentialism From Dostoevsky to Sartre* (New York: Meridian Books, 1956).
 
 [^38]:	Jack Kerouac, “Introduction” to The Americans (New York: Grove Press, 1959), vi.
 
