--- a/4R.md
+++ b/4R.md
@@ -128,7 +128,7 @@ Most unsympathetic commentators regarded Beats as conformist in their nonconform
 
 [^35]:	Norman Podhoretz, “The Know-Nothing Bohemians,” *Partisan Review* XXV (1958), 313.
 
-[^36]: Burroughs in *The Job: Interviews with William Burroughs by Daniel Odier* (New York: Penguin, 1989 [1969], p. )
+[^36]: Burroughs in *The Job: Interviews with William Burroughs by Daniel Odier* (New York: Penguin, [1969] 1989, p. )
 
 [^37]:	Ann Charters, *The Beats: Literary Bohemians in Postwar America* (Detroit, Mich.: Gale Research Co., 1983); Gene Feldman and Max Gartenberg, *The Beat Generation and the Angry Young Men* (Secaucus: Citadel Press, 1984); Kostas Myrsiades, *The Beat Generation: Critical Essays* (New York: Peter Lang, 2002); Leerom Medovoi, *Rebels Youth and the Cold War Origins of Identity*(Durham: Duke University Press, 2005).
 
@@ -137,24 +137,37 @@ Beat spontaneity did not result in a consistent philosophy. More philosophically
 
 [^38]:	George Cotkin, *Existential America* (Baltimore: Johns Hopkins University Press, 2003), 91-158; Hazel E. Barnes, *An Existentialist Ethics* (New York: Knopf, 1967); Hazel E. Barnes, *The Literature of Possibility: A Study in Humanistic Existentialism* (Lincoln: University of Nebraska Press, 1959); Walter Arnold Kaufmann, *Existentialism From Dostoevsky to Sartre* (New York: Meridian Books, 1956).
 
-Existentialism defined the human condition as strikingly individual. Though humans live in groups, our consciousness and our death were ours alone. Where determinisms wrongly subsumed particulars under abstract and ultimately meaningless concepts, existentialism was concerned with recognizing contingencies and making rather than discovering truth. At the core of things was the necessity of human choice. It was the inescapability of making choices and creating an identity that gave meaning to the famous Sartrean aphorism that existence precedes essence. Many of those choices were crucial ones that could not be fudged and committed one to a particular course, “either/or” in the parlance rather than “both/and.” Even though the world was absurd in the sense that meaning was not given, having to make a choice conferred a seriousness to life and required individuals to assume responsibility for whom one was and whom one became. One could not evade the responsibility of choice even if one occupied a lowly social position or suffered through oppressive conditions, a point Camus advanced in his “Myth of Sisyphus.” Condemned to the absurdity of forever pushing a boulder up a mountain, Sisyphus nonetheless differed from the inhuman boulder because he retained the ability to deny fate and make deliberate choices about what he would do. Sartre labeled bad faith any denial of responsibility for one’s situation. It was inauthentic to simply shrug one’s shoulders and assert this is just the way I am. Borrowing from phenomenological discussion of consciousness, Sartre asserted resignation denied our awareness, however dim and distant, that we are always more than ourselves. Existentialists insisted there was no greater inauthenticity than accepting without passionate engagement and choice social conventions.
+Existentialism defined the human condition as strikingly individual. Though humans live in groups, our consciousness and our death were ours alone. Where determinisms wrongly subsumed particulars under abstract and ultimately meaningless concepts, existentialism stressed contingencies and countered that truths were made, not discovered. At the core of things was the necessity of human choice. It was the inescapability of making choices and creating an identity that gave meaning to the famous Sartrean aphorism that existence precedes essence.[^39] Many of those choices were crucial ones that could not be fudged and committed an individual to a particular course, “either/or” in the parlance rather than “both/and.” Even though the world was absurd in the sense that meaning was not given, having to make a choice conferred a seriousness to life and required individuals to assume responsibility for whom one was and whom one became. One could not evade the responsibility of choice even if one occupied a lowly social position or suffered through oppressive conditions. That was the nub of Camus's “Myth of Sisyphus.” Condemned to the absurdity of forever pushing a boulder up a mountain, Sisyphus nonetheless differed from the inhuman boulder because he retained the ability to deny fate and make deliberate choices about what he would do. Sartre labeled bad faith any denial of responsibility for one’s situation. It was inauthentic to simply shrug one’s shoulders and assert this is just the way I am. Borrowing from phenomenological discussion of consciousness, Sartre asserted resignation denied our awareness, however dim and distant, that we are always more than ourselves. Existentialists insisted there was no greater inauthenticity than accepting without passionate engagement and choice social conventions.[^40]
 
-Although Sartre once wrote “hell is other people,” existentialists were wary of blithe libertarianism and the egoism of exclusive self regard. Having condemned the bad faith of acquiescing in a socially-imposed identity, existentialists also challenged the bad faith of pretending antecedent conditions had no effect whatsoever, as if all things were possible. One of those antecedent conditions that the French recognized was society itself. That recognition gave the politics of the existentialists social concerns. For de Beauvoir, authenticity required an open future which extends itself by opening the freedom of others. It also presented Sartre and de Beauvoir with the task of squaring the individual freedom of existentialism expounded in “Existentialism is Humanism” with the social causation of Marxism. Sartre’s effort to weave together collective and individual action in *The Critique of Dialectical Reason* was at best only partially successful. The liberal Camus regarded the project as utopian politics because it treated class as an abstraction and justified positions on the grounds of historical necessity. Doing so necessarily drained values from political action and substituted revolutionary fervor for regard for others. Concerned to keep means and ends in balance, Camus opted for a reformist politics that accepted in some fashion the positions of others. That stance could founder on the search for an unachievable middle position, as in his untenable hope that the Algerian crisis could be resolved in a compromise that left French nationals in their unique place in the colony while honoring the desire of indigenous Algerians for independence. Camus nonetheless proved tremendously inspiring for Americans eager for a new politics that combined the individual authenticity of social opposition with an acceptance of legitimate social bonds. His influence could be found in such documents of the New Left as *The Port Huron Statement* and *Liberation* magazine.
+[^39]: Jean Paul Sartre, "Existentialism is a Humanism," translated by Carol Macomber ; introduction by Annie Cohen-Solal ; notes and preface by Arlette Elkaïm-Sartre ; edited by John Kulka (New Haven: Yale University Press, [1945] 2007, vii )
+
+[^40]: @camus1955. [@sartre1967, p. 147-186] serves as primer for Sartre's views on bad faith.
+
+Although Sartre once wrote “hell is other people,” existentialists were wary of blithe libertarianism and the egoism of exclusive self regard. Having condemned the bad faith of acquiescing in a socially-imposed identity, existentialists also challenged the bad faith of pretending antecedent conditions had no effect whatsoever, as if all things were possible. One of those antecedent conditions that the French recognized was society itself. That recognition gave the politics of the existentialists social concerns. For de Beauvoir, authenticity required an open future which extends itself by opening the freedom of others. It also presented Sartre and de Beauvoir with the task of finding a way that the individual freedom of existentialism expounded in “Existentialism is Humanism” was in line with the social causation of Marxism. Sartre’s effort to weave together collective and individual action in *The Critique of Dialectical Reason* was at best only partially successful.
+
+The liberal Camus regarded the project as utopian politics because it treated class as an abstraction and justified positions on the grounds of historical necessity. Doing so necessarily drained values from political action and substituted revolutionary fervor for regard for others. Concerned to keep means and ends in balance, Camus opted for a reformist politics that accepted in some fashion the positions of others. That stance could flounder on the search for an unachievable middle position, as was the case with his untenable hope that the Algerian crisis could be resolved in a compromise that left French nationals in their unique place in the colony while honoring the desire of indigenous Algerians for independence. Camus nonetheless proved tremendously inspiring for Americans eager for a new politics that combined the individual authenticity of social opposition with an acceptance of legitimate social bonds. His influence could be found in such documents of the New Left as *The Port Huron Statement* and *Liberation* magazine. In the former's insistence that "The goal of man and society should be human independence: a concern not with image of popularity but with finding a meaning in life that is personally authentic; a quality of mind not compulsively driven by a sense of powerlessness, nor one which unthinkingly adopts status values, nor one which represses all threats to its habits, but one which has full, spontaneous access to present and past experiences, one which easily unites the fragmented parts of personal history, one which openly faces problems which are troubling and unresolved; one with an intuitive awareness of possibilities, an active sense of curiosity, an ability and willingness to learn," the Students for a Democratic Society made explicit its debt to Camus.[^41]
+
+[^41]: Students for a Democratic Society, *Port Huron Statement* http://www2.iath.virginia.edu/sixties/HTML_docs/Resources/Primary/Manifestos/SDS_Port_Huron.html
 
 Worry over the legitimacy of social bonds accounted for the constant talk about alienation and the near ubiquity of the phrase “failure to communicate.” It surfaced as well in the widespread prominence of the theme of loneliness in postwar discourse. Artwork as diverse as Nicholas Ray’s *In a Lonely Place* (1950), Hank Williams’s “I’m So Lonesome I Could Cry” (1949), H. J. J. Straelen’s introduction to existentialism, *Man, the Lonely* (1952), Dorothy Day's autobiography, *The Long Loneliness* (1952), Chester Himes’s *Lonely Crusade* (1947), Margaret Wood’s social psychological exploration, *Paths to Loneliness* (1953), and Clark Moustakas’s psychological cum philosophical investigation of *Loneliness* (1961) raised the question of how to make meaningful connections in an age of impersonality. Such concerns testified to a new meaning for the word “lonely.” Previous generations had understood the term to mean feelings arising from being physically alone, the consequence of being friendless or losing a loved one. They regarded the condition as an inescapable part of life. After the war, the term also came to signify feelings of insufficient or unrewarding social connections, feelings that were liable to arise at any moment or with any interaction. Modern loneliness implied something askew in social relations or something lacking in the kinds of people produced by such relations. “Only connect,” E. M. Forester wrote in *Howard’s End* but many worried that connection was simply not possible in American life as currently constituted.
 
-No one at midcentury did a more thorough job of showing the contrast between ideals of togetherness and the less palatable truths of American life than photographer Robert Frank. His *Americans* (1958), criticized at the time for being politically unacceptable and aesthetically bankrupt, has taken on iconic status since. Born to a Swiss Jewish family, Frank came to United States in 1947, working first as a fashion photographer. With the help of famed photographer Walker Evans, Frank won a Guggenheim Fellowship in 1955 to photograph wide swathes of American life. Traveling from coast to coast over the course of two years, Frank took some 28,000 shots of which eighty-three were eventually published in the book. Initially unable to find an American publisher primarily because of his departure from prevailing norms in focus and lighting, Frank succeeded with the French publisher Robert Delpire in 1958 before landing with Grove Press in the United States the following year. Aiding Grove Press’s decision was the introduction provided by Jack Kerouac, who praised for Frank for having “sucked a sad poem right out of America onto film, taking rank among the tragic poets of the world.”[^38] Within the next three years, he had major shows at the Chicago Art Institute and the Museum of Modern Art.
+No one at midcentury did a more thorough job of showing the contrast between ideals of togetherness and the less palatable truths of American life than photographer Robert Frank (1924 - ). His *Americans* (1958), criticized at the time for being politically unacceptable and aesthetically bankrupt, has taken on iconic status since. Born to a Swiss Jewish family, Frank came to United States in 1947, working first as a fashion photographer. With the help of famed photographer Walker Evans, Frank won a Guggenheim Fellowship in 1955 to photograph wide swathes of American life. Traveling from coast to coast over the course of two years, Frank took some 28,000 shots of which eighty-three were eventually published in the book. Initially unable to find an American publisher primarily because of his departure from prevailing norms in focus and lighting, Frank succeeded with the French publisher Robert Delpire in 1958 before landing with Grove Press in the United States the following year. Aiding Grove Press’s decision was the introduction provided by Jack Kerouac, who praised for Frank for having “sucked a sad poem right out of America onto film, taking rank among the tragic poets of the world.”[^42] Within the next three years, he had major shows at the Chicago Art Institute and the Museum of Modern Art.
 
-Frank’s aesthetic choices underwrote his thematic ones. His sense that the United States was a lonely, often bleak place stemmed not simply from his experiences but his long-standing opposition to sentimentality and beauty in art as false. He fretted that beauty obscured broader social implications, holding that perfect composition would make it less likely that the viewer would move beyond the frame. In contrast to professional photographers, Frank preferred blurred, grainy, and muddy exposures that he believed opened access to the underlying forces and truth of a situation. Frank rejected lighting that directed viewers to the expressive features of common humanity, opting instead to capture Americans with blank or tormented looks. In his pictures of sparsely populated bars, marching bands in which instruments obscure musicians’ faces, and automobile drivers and passengers unusually cropped to give the impression of unknown destinations and separation from the environments, Frank put a punctuation point on his sense of the desolation of American life.[^39]
+[^42]:	Jack Kerouac, “Introduction” to The Americans (New York: Grove Press, 1959), vi.
+
+Frank’s aesthetic choices underwrote his thematic ones. His sense that the United States was a lonely, often bleak place stemmed not simply from his experiences but his long-standing opposition to sentimentality and beauty in art as false. He fretted that beauty obscured broader social implications, holding that perfect composition would make it less likely that the viewer would move beyond the frame. In contrast to professional photographers, Frank preferred blurred, grainy, and muddy exposures that he believed opened access to the underlying forces and truth of a situation. Frank rejected lighting that directed viewers to the expressive features of common humanity, opting instead to capture Americans with blank or tormented looks. In his pictures of sparsely populated bars, marching bands in which instruments obscure musicians’ faces, and automobile drivers and passengers unusually cropped to give the impression of unknown destinations and separation from the environments, Frank put a punctuation point on his sense of the desolation of American life.[^43]
+
+[^43]:	Jonathan Green, *American Photography: A Critical History 1945 to the Present* (New York: H.N. Abrams, 1984).
 
 Americans’ inability to connect with one another was especially clear in two of his downtown New Orleans photographs. The first captures pedestrians trying to make their way, only to find themselves impeded by a stream heading the other way. Like particles in Brownian motion, they collide, streaming this way and that. All in caught in grim and unsmiling profile. No one is looking at anyone else (one person is taking a wary glance at us, the audience). Some are looking down. Together they create a mass that extends the entire width of the frame. Determined to move onward, they appear to have neither connection with anyone else despite the claustrophobic quality of the image nor apparent destination—a graphic representation of a lonely crowd. The second, more iconic image captures the agonies of urban segregation. The photo, which graced the original cover, was entitled “Trolley New Orleans.” In typical Southern fashion, whites sit in the front and blacks in the rear. All passengers are looking out at us with varying emotions, ranging from contempt or dismissal from the white woman in the second row to anguish on the face of the black man two rows behind her. It is clearly a warm day since the windows are opened. The raised windows distort the reflection from the street and we can make out what might be apartment buildings, bridges, or pedestrians. Whatever they are, they shimmer like mirages. The open windows create an impression of cells in which each of the passengers is sealed off from his or her fellows, an effect driven home by the longing in their looks and the glistening jambs.
 
 Frank did not arrange his photos in chronological order. Nor did he set out to tell a particular story. He did, however, have themes to which he returned --- automobiles, bars, race, and, perhaps most poignant of all, flags. Frank deployed flags not as a symbol of unity but as an unfamiliar and divisive object. In “Parade - Hoboken, New Jersey,” the flag itself serves decapitate. Rather than depicting a parade, the picture shows two apartment dwellers looking out at a parade, or so we assume. The woman in the left window is not fully visible. A white shade is partially drawn, creating a deep shadow. We are only able to make out her chin and mouth. Between the windows is an unfurled flag, blowing in the breeze. Fairly taut, it blows in such a way to make the face of the second woman invisible to us. The flag dominates the composition but it ensures Americans remain unknown to each other. The reality of division stands against the ideal of unity.
 
-The counterpart of Frank in painting was George Tooker. Born in Brooklyn, trained by the famed Depression-era illustrator and chronicler of New York life, Reginald Marsh, Tooker adopted a style of figurative representation, unusual juxtapositions, bleak lighting, and ambiguous or complex perspectives, a style that he called “reality impressed on the mind so hard that it returns as a dream.” His paintings were fantasies or reveries, he insisted, but of a world drained of human interaction, deep emotion and individual initiative. His figures shuffle rather than walk, and often seem isolated, imprisoned, or estranged. Typically an oppressive architecture overwhelms them, as the anonymity and standardization of modern life defines their environment. This approach dominates such works of midcentury as *The Subway* (1950), *Government Bureau* (1955-1956), and *Waiting Room* (1959). In the first, the effects of mass society in all its horror impresses itself on the viewer almost immediately. The multiple vanishing points, the confining cubicles in which numerous people wait or hide, the depressed sorrowful or blank expressions on the riders’ faces, the metal grating, all contribute to the tenor of solitary nature of alienation. Tooker claimed the subway was the epitome of “a denial of the senses and a negation of life itself.”[^40]
+The counterpart of Frank in painting was George Tooker (1920-2011). Born in Brooklyn, trained by the famed Depression-era illustrator and chronicler of New York life, Reginald Marsh, Tooker adopted a style of figurative representation, unusual juxtapositions, bleak lighting, and ambiguous or complex perspectives, a style that he called “reality impressed on the mind so hard that it returns as a dream.” Often grouped with Edward Hopper for their common concentration on isolation, Tooker nonetheless insisted that in contrast to Hopper's realism, his paintings were fantasies or reveries of a world drained of human interaction, deep emotion and individual initiative. His figures shuffle rather than walk, and often seem isolated, imprisoned, or estranged. Typically an oppressive architecture overwhelms them, as the anonymity and standardization of modern life defines their environment. This approach dominates such works of midcentury as *The Subway* (1950), *Government Bureau* (1955-1956), and *Waiting Room* (1959). In the first, the effects of mass society in all its horror impresses itself on the viewer almost immediately. The multiple vanishing points, the confining cubicles in which numerous people wait or hide, the depressed sorrowful or blank expressions on the riders’ faces, the metal grating, all contribute to the tenor of solitary nature of alienation. Tooker claimed the subway was the epitome of “a denial of the senses and a negation of life itself.”[^44]
 
-Popular song has long trafficked in loneliness, plying the distance between the ideal of love and the reality of abandonment. Midcentury saw more than its share of mawkish tropes. Songs aimed at teenagers, whose inexperience leads them to imagine their condition will last forever, often delighted in the pain as a sign of sensitivity. Occasionally, however, pop songs gave the loneliness a new twist. Although Ricky Nelson cared less for pop ballads than the rockabilly of Sun Records, his father-manager, Ozzie, believed his vocal abilities were more suited for the former, and had him sing on the family’s franchise, the television show *Ozzie and Harriet*. Ricky play himself on the show, which took a fateful turn after Rickey recorded a version of Fats Domino’s “I’m Walkin’” in 1957 to impress his date. After that he performed regularly, boosting the ratings and easing the acceptance of rock ’n’ roll in many American households. “Poor Little Fool,” (1958), “A Teenager’s Romance,” (1957), and “Lonesome Town” (1958) all charted and made Nelson a heart throb. It was that experience that gave credibility to his last great success of his early career, “Teenage Idol” (1962). Much of “Idol” is a standard-issue complaint about the lack of emotional fulfillment in stardom. Those who envy the singer have no way of knowing how lonesome he can be since he’s always passing through, with no time to find someone with whom he can truly talk. In accord with the genre, Nelson maintains fame and fortune won’t mean a thing if he’s all alone. What is noteworthy is the linkage between traveling, stardom and loneliness in a song designed for teenage girls --- something rarely done in midcentury. On the one hand, the troubles of the rich and famous hardly evoke empathy. The obvious retort to the throwaway line about the worthlessness of fame and fortune is to advise the singer to stay home. On the other, the ubiquity of lonesomeness makes the celebrity jes’ folks. The idol is no more suited to escape the nexus of loneliness than any other American, except most other Americans can't sing a song that evoked the desire to relieve Nelson of his loneliness.
+[^44]:	Thomas Garver, *George Tooker* (New York: Chameleon Books, 1992); http://collection.whitney.org/object/3052. Accessed March 10, 2018. See also, [@tunkl1980]
 
+Without question, the epitome of midcentury loneliness in song was Frank Sinatra.
 It was the contribution of Frank Sinatra to create a body of work that moved beyond predictable laments and conveyed how loneliness dissolved facades and personas, revealing an essential vulnerability. Born in 1915, Sinatra had achieved 1940s success singing for a number of large bands, including Tommy Dorsey and Harry James. A teen idol in the mid-1940s, he hit a rough patch thereafter in which he was reduced to doing novelty songs. Released from his Columbia contract, he staged a comeback in the 1950s with an Oscar for his role in *From Here to Eternity* (1953) and sixteen albums for Capitol in which he reinvented himself as a mature, complex singer. The Capitol albums were not so much random collections of songs than ones organized around a theme or concept. Some featured the hip Sinatra, a jaunty and charming rogue with a jazz sensibility. Contrasting with the swinging Sinatra was the lonely one, who could not transcend the damages of his failed love life and went through his daily life unconnected to and unaware of others. In albums *In the Wee Small Hours* (1955), *Where are You?* (1957), *Only the Lonely* (1958)--which Sinatra called his favorite--and *No One Cares* (1959), Sinatra revealed a self crumbling under the pressure of isolation. Bolstering the effect was the album art, which portrayed a devastated Sinatra in ways few stars of his magnitude would have allowed. *Only the Lonely* featured Sinatra as a clown obscured by a black background so that only half his face is discernible and the visible part touched with red highlights on lips, nose and eyes to give the impression of a crying clown. *No One Cares* has him sitting alone and forlorn bathed in light while all around him couples socialize.[^41]
 
 Sinatra’s 1950s work subtly explored the varieties of loneliness, revealing a self insecure even when appearing confident to others. With the help of arrangers Nelson Riddle and Gordon Jenkins, Sinatra summoned a complex psychological landscape full of precariousness and disquiet. These effects owed much to Sinatra’s talents and musical intelligence. His celebrated breath control enabled him to emulate both the operatic bel canto style, which varied legato and staccato passages while frequently altering tempo, and Dorsey’s trombone virtuosity. With his flexible phrasing and accenting, Sinatra mastered a conversational style of singing that enabled him to project a variety of vulnerabilities, in contrast to the strident, even parodic, masculinity of his “swinging” albums. In fraying his voice or shifting between major and minor keys without musical resolution, Sinatra constructed a singing self that lacked poise and closure. In those cases, where the song, like an operatic recitative, lacked a real tune, Sinatra captured the midcentury despair at the inability of the self to find its center in social life.
@@ -170,11 +183,11 @@ The problem of loneliness generated calls for adopting of cheery attitude, joini
 
 
 
-[^38]:	Jack Kerouac, “Introduction” to The Americans (New York: Grove Press, 1959), vi.
 
-[^39]:	Jonathan Green, *American Photography: A Critical History 1945 to the Present* (New York: H.N. Abrams, 1984).
 
-[^40]:	Thomas Garver, *George Tooker* (New York: Chameleon Books, 1992); http://collection.whitney.org/object/3052. Accessed March 10, 2018.
+
+
+
 
 [^41]:	Chris Rojek, *Frank Sinatra* (Cambridge and Malden, MA: Polity, 2004); John Rockwell, *Sinatra: An American Classic* (New York: Random House, 1984); Roger Gilbert, “The Swinger and the Loser: Sinatra, Masculinity, and Fifties Culture,” in *Frank Sinatra and Popular Culture: Essays on an American Icon*, ed. Leonard Mustazza (Westport, Conn: Praeger, 1998); Steven Petkov, “Ol’ Blue Eyes and the Golden Age of the American Song: The Capitol Years,” in *The Frank Sinatra Reader* (New York: Oxford University Press, 1995), 74-84.
 
